tests/golden/err-import-cycle/expected_error.txt
error: 循環 import を検出しました: a.clum -> b.clum -> a.clum
 --> b.clum:1:2
  |
1 | @./a
  |  ^^^
